# gnu_hoxsl

./: .gitignore  .gitmodules  INSTALL  Makefile  Makefile.am  README.md  configure.ac
doc/: Makefile.am  hoxsl.texi  macros.texi
src/: apply.xsl  node.xsl  record.xsl
src/apply/: arity.xsl  partial.xsl  ref.xsl  thrush.xsl
src/transform/: apply-gen.xsl
test/: apply-test.xsl  apply.xspec  node.xspec  record.xspec  runner
test/apply/: arity-test.xsl  arity.xspec  partial-test.xsl  partial.xspec  ref-test.xsl  ref.xspec  thrush-test.xsl  thrush.xspec
test/transform/: apply-gen-test-in.xsl  apply-gen-test.xsl  apply-gen.xspec
